# mathbot-rs

./: Cargo.toml  invite.txt
src/: main.rs
src/latex/: generator.rs  mod.rs  template.tex  web_api.rs
