[package]
name = "mathbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.147", features = ["derive"]}
pretty_env_logger = "0.4.0"
reqwest = "0.11.12"
anyhow = "1.0.66"
log = "0.4.17"
